--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bootstrap": "^3.3.7",
+    "install": "^0.8.8",
+    "npm": "^4.4.4",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
-    "react-router": "^4.0.0"
+    "react-router": "^4.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "node-sass": "^4.5.1",
