--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "install": "^0.8.8",
     "npm": "^4.4.4",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
     "react-router": "^4.0.0",
+    "react-scroll-listener": "^0.5.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
