--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-fontawesome": "^1.5.0",
     "react-router": "^4.0.0",
     "react-scroll-listener": "^0.5.0",
+    "react-slick": "^0.14.7",
+    "slick-carousel": "^1.6.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
