--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
+    "react-google-maps": "^4.11.0",
     "react-router": "^4.0.0",
     "react-scroll-listener": "^0.5.0",
     "react-slick": "^0.14.7",
     "slick-carousel": "^1.6.0",
+    "superagent": "^3.5.2",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
