--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
     "install": "^0.8.8",
     "npm": "^4.4.4",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
@@ -19,6 +21,7 @@
     "react-scroll": "^1.4.8",
     "react-scroll-listener": "^0.5.0",
     "react-slick": "^0.14.7",
+    "react-spark-scroll-gsap": "^2.0.3",
     "slick-carousel": "^1.6.0",
     "superagent": "^3.5.2",
     "underscore": "^1.8.3"
